hphp/test/slow/parser/use-strict.php.expectf
Fatal error: You seem to be trying to use a different language. May I recommend Hack? http://hacklang.org in %s/test/slow/parser/use-strict.php on line 3